grammar.js
    program: $ => choice($.package, repeat($.packageBody)),

    //////////////
    // Packages //
    //////////////
    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl,
      $.typeDef,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      $.externCImport
      // externModuleImport
    ),

    type: $ => choice(
      $.typePrimary,
      // Function type (revised)
      seq('function', $.type, $.identifier, '(', optional($.functionFormals), ')')
    ),

    typePrimary: $ => choice(
      seq($.typeIde, optional(seq('#', '(', comma_sep($.type), ')'))),
      $.typeNat,
      seq('bit', optional(seq('[', $.typeNat, ':', $.typeNat, ']'))),
      'int'
    ),

    // Polymorphism types starts with lowercase letters
    typeIde: $ => seq(optional(seq($.packageIde, '::')), choice($.Identifier, $.identifier)),
    typeNat: $ => $.decDigits,

    ///////////////
    // Interface //
    ///////////////
    varDecl: $ => choice(
      seq($.type, comma_sep($.varInit), ';'),
      prec(PREC.ASSIGN, seq('let', $.identifier, '=', $.expression, ';'))
    ),
    varInit: $ => seq($.identifier, optional($.arrayDims), optional(seq('=', $.expression))),
    arrayDims: $ => repeat1(seq('[', $.expression, ']')),

    varAssign: $ => prec(PREC.ASSIGN, choice(
      seq($.lValue, '=', $.expression, ';'),
      seq('let', $.identifier, '<-', $.expression, ';'),
      seq('match', $.pattern, '=', $.expression, ';')
    )),
    expression: $ => choice(
      $.condExpr,
      $.operatorExpr,
      $.exprPrimary
    ),
    exprPrimary: $ => choice(
      seq(optional(seq($.packageIde, '::')), $.identifier),
      seq(optional(seq($.packageIde, '::')), $.Identifier),
      $.intLiteral,
      $.realLiteral,
      $.stringLiteral,
      $.systemFunctionCall,
      seq('valueof', '(', $.type, ')'),
      seq('valueOf', '(', $.type, ')'),
      seq('(', $.expression, ')'),
      '?',  // Don't-care expressions
      $.bitConcat, $.bitSelect,
      $.beginEndExpr,
      $.actionBlock,
      $.actionValueBlock,
      $.functionCall,
      $.methodCall,
      $.typeAssertion,
      $.structExpr,
      prec(PREC.FIELD, seq($.exprPrimary, '.', $.identifier)),  // Struct member selection
      $.taggedUnionExpr,
      $.interfaceExpr,
      $.rulesExpr,
      $.caseExpr,
      prec(PREC.STMT, $.seqFsmStmt),
      prec(PREC.STMT, $.parFsmStmt),
      "True", "False", "noAction"
    ),

    intLiteral: $ => choice(
      '\'0',
      '\'1',
      $.sizedIntLiteral,
      $.unsizedIntLiteral
    ),

    unsizedIntLiteral: $ => prec.left(choice(
      seq(optional($.sign), $.baseLiteral),
      seq(optional($.sign), $.decNum)
    )),

    baseLiteral: $ => choice(
      seq(optional($.decNum), choice('\'d', '\'D'), $.decDigitsUnderscore),
      seq(optional($.decNum), choice('\'h', '\'H'), $.hexDigitsUnderscore),
      seq(optional($.decNum), choice('\'o', '\'O'), $.octDigitsUnderscore),
      seq(optional($.decNum), choice('\'b', '\'B'), $.binDigitsUnderscore),
    ),

    decNum: $ => token(seq(/[0-9]+/, optional(/[0-9_]+/))),

    decDigits: $ => /[0-9]+/,
    binDigitsUnderscore: $ => /[01\?_]+/,

    ///////////////////
    // Real literals //
    ///////////////////
    identifier: $ => token(seq(LOWER_CASE_CHARS, IDENTIFIER_CHARS))
  }
});

function beginEndStmt($, stmt) {
  return seq(
    'begin', optional(seq(':', $.identifier)),
    repeat(stmt),
    'end', optional(seq(':', $.identifier))
  );
}

function ifStmt($, stmt) {
  return prec.left(seq(
    'if', '(', $.condPredicate, ')',
    field('if_body', stmt),
    optional(seq('else', stmt))
  ));
}

function caseStmt($, stmt) {
  let caseItem = field('case_item', seq(comma_sep($.expression), ':', stmt));
  let defaultItem = field('default_item', seq('default', optional(':'), stmt));
  // cases matches
  return seq(
    'case', '(', $.expression, ')',
    repeat(caseItem),
    optional(defaultItem),
    'endcase'
  );
}

function whileStmt($, stmt) {
  return seq(
    'while', '(', $.expression, ')',
    field('while_body', stmt)
  );
}

function forStmt($, stmt) {
  let simpleVarAssign = seq($.identifier, '=', $.expression);
  let simpleVarDeclAssign = seq(optional($.type), $.identifier, '=', $.expression);
  let forOldInit = comma_sep(simpleVarAssign);
  let forNewInit = seq(
    $.type, $.identifier, '=', $.expression, repeat(seq(',', simpleVarDeclAssign))
  );
  let forInit = choice(
    forOldInit,
    forNewInit
  );
  let forTest = $.expression;
  let varIncr = seq($.identifier, '=', $.expression);
  let forIncr = comma_sep(varIncr);
  return seq(
    'for', '(', forInit, ';', forTest, ';', forIncr, ')',
    field('for_body', stmt)
  );
}

function comma_sep(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
